--- a/c/template/list/0.0/makefile
+++ b/c/template/list/0.0/makefile
@@ -1,5 +1,10 @@
 .PHONY: test
 test: test.c list.h
+	gcc test.c
+	@echo make OK
+
+.PHONY: test-Wall
+test-Wall: test.c list.h
 	gcc test.c -Wall -pedantic-errors -std=c89
 	@echo make OK
 
