--- a/c/static_list/makefile
+++ b/c/static_list/makefile
@@ -1,5 +1,5 @@
 CC = gcc -Wall
-objs = mempool.o
+objs = static_list.o
 
 .PHONY: it
 it: 001
@@ -7,8 +7,8 @@ it: 001
 001: 001.c $(objs)
 	$(CC) 001.c $(objs) -o 001
 
-mempool.o: mempool.h mempool.c
-	$(CC) mempool.c -c
+static_list.o: static_list.h static_list.c
+	$(CC) static_list.c -c
 
 .PHONY: clean
 clean:
