--- a/c/mempool/makefile
+++ b/c/mempool/makefile
@@ -7,10 +7,13 @@ objs = mempool.o
 002: 002.c $(objs)
 	$(CC) 002.c $(objs) -o 002
 
+003: 003.c $(objs)
+	$(CC) 003.c $(objs) -o 003
+
 mempool.o: mempool.h mempool.c
 	$(CC) mempool.c -c
 
 .PHONY: clean
 clean:
-	rm $(objs) 001 002
+	rm $(objs) 001 002 003
 
