--- a/c/my_malloc/makefile
+++ b/c/my_malloc/makefile
@@ -1,5 +1,6 @@
-CC = gcc -Wall
-objs = mempool.o
+CC = gcc -Wall -pedantic
+objs = mempool.o my_malloc.o
+exes = 001
 
 001: 001.c $(objs)
 	$(CC) 001.c $(objs) -o 001
@@ -7,7 +8,10 @@ objs = mempool.o
 mempool.o: mempool.h mempool.c
 	$(CC) mempool.c -c
 
+my_malloc.o: my_malloc.h my_malloc.c
+	$(CC) my_malloc.c -c
+
 .PHONY: clean
 clean:
-	rm $(objs) 001
+	rm $(objs) $(exes)
 
