--- a/cpp/new/makefile
+++ b/cpp/new/makefile
@@ -2,9 +2,10 @@ CC = g++ -Wall -pedantic
 
 objs = mempool.o my_new.o
 exes = 001
+libs = -lpthread
 
 001: 001.cpp $(objs)
-	$(CC) 001.cpp $(objs) -o 001
+	$(CC) 001.cpp $(objs) -o 001 $(libs)
 
 mempool.o: mempool.h mempool.cpp
 	$(CC) mempool.cpp -c
