--- a/cpp/new/makefile
+++ b/cpp/new/makefile
@@ -1,4 +1,4 @@
-CC = g++ -Wall -pedantic
+CC = clang++ -Wall -pedantic
 
 objs = mempool.o my_new.o
 exes = 001
@@ -6,6 +6,9 @@ libs = -lpthread
 
 001: 001.cpp $(objs)
 	$(CC) 001.cpp $(objs) -o 001 $(libs)
+
+test: test.cpp $(objs)
+	$(CC) test.cpp $(objs) -o test
 
 mempool.o: mempool.h mempool.cpp
 	$(CC) mempool.cpp -c
